fix: submit only if button is visible

--- a/MTurk.html
+++ b/MTurk.html
@@ -651,7 +651,7 @@
 
             // Press S for "Submit"
             if (evt.key == 's' || evt.key == 'q') {
-                $("#submitButton").click()
+                $("#submitButton:visible").click()
             }
 
             // Press 0-9 to change the label
